src/objects/Integration_Log__c.object
<CustomObject>
    <fields>
        <fullName>Context__c</fullName>
        <description>An optional text field used to indicate the context of the interface transaction. This could be a reference to an official interface or a system/process name depending upon the reporting requirement.</description>
        <label>Context</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Transaction_Id__c</fullName>
        <description>An optional unique identifier defined by an external system for referencing an interface transaction.</description>
        <externalId>true</externalId>
        <label>External Transaction Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordId__c</fullName>
        <description>The Record ID of the record that this log entry refers to.</description>
        <label>RecordId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Id__c</fullName>
        <description>The Record ID of the record that this log entry refers to.</description>
        <label>Record ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Detail__c</fullName>
        <description>Optional text field used to provide further information about the Status.</description>
        <label>Status Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Indicates the status of an interface transaction. Values:
1.	Success (Applicable to all record types. Indicates that an interface transaction completed successfully, the meaning of which is dependent upon the type of pattern (record type)).
2.	Failure (Applicable to all record types. Indicates that an interface transaction completed unsuccessfully, the meaning of which is dependent upon the type of patter (record type)).
3.	In Progress (Applicable to Callback record type only. Indicates that an integration related Salesforce process is in progress. Upon completion the Status and Status Detail will be updated accordingly).</description>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failure</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>object_type__c</fullName>
        <description>reference to the salesforce object</description>
        <label>Object Type</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Integration Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Status_Detail__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>object_type__c</columns>
        <columns>RecordId__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>RECORDTYPE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Failure</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Status_Detail__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>object_type__c</columns>
        <columns>RecordId__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>RECORDTYPE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Failure</value>
        </filters>
        <label>Failure</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ILog-{000000}</displayFormat>
        <label>Integration Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Logs</pluralLabel>
    <recordTypes>
        <fullName>Callback</fullName>
        <active>true</active>
        <description>Used when Salesforce sends data via an interface as part of a long running Salesforce process, the completion of which can be used to update the Status &amp; Status Detail so that either a completion event may be fired or to support polling from an interested</description>
        <label>Callback</label>
    </recordTypes>
    <recordTypes>
        <fullName>Fire_and_Forget</fullName>
        <active>true</active>
        <description>Used when there is no requirement to track the status of an interface.</description>
        <label>Fire-and-Forget</label>
    </recordTypes>
    <recordTypes>
        <fullName>Track_Response</fullName>
        <active>true</active>
        <description>Used when Salesforce sends data via an interface and expects a response. This may not necessarily be synchronous communication as the response may only be for logging purposes</description>
        <label>Track Response</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>